repositories {
    mavenCentral()
}

dependencies {
    api project(':arc3d-core')
    compileOnly "org.lwjgl:lwjgl:${lwjgl_version}"

    testImplementation "org.slf4j:slf4j-api:${slf4j_version}"
    testImplementation "org.slf4j:slf4j-simple:${slf4j_version}"

    testImplementation "org.lwjgl:lwjgl:${lwjgl_version}"
    testImplementation "org.lwjgl:lwjgl-jemalloc:${lwjgl_version}"
    testImplementation "org.lwjgl:lwjgl-stb:${lwjgl_version}"
    testImplementation "org.lwjgl:lwjgl-spng:${lwjgl_version}"
    testImplementation "org.lwjgl:lwjgl-zstd:${lwjgl_version}"
    testRuntimeOnly "org.lwjgl:lwjgl:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
    testRuntimeOnly "org.lwjgl:lwjgl-jemalloc:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
    testRuntimeOnly "org.lwjgl:lwjgl-stb:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
    testRuntimeOnly "org.lwjgl:lwjgl-spng:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
    testRuntimeOnly "org.lwjgl:lwjgl-zstd:${lwjgl_version}:${rootProject.ext.lwjglNatives}"
}

sourceSets {
    vector {
        java.srcDirs = ['src/vector/java']
    }
    main {
        compileClasspath += sourceSets.vector.output
        runtimeClasspath += sourceSets.vector.output
    }
    test {
        compileClasspath += sourceSets.vector.output
        runtimeClasspath += sourceSets.vector.output
    }
}

test {
    failOnNoDiscoveredTests = false
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-modules', 'jdk.incubator.vector',
            '--add-reads', 'icyllis.arc3d.image=ALL-UNNAMED',
            '--add-reads', 'icyllis.arc3d.image.test=ALL-UNNAMED',
    ]
}

tasks.named('compileVectorJava', JavaCompile) {
    it.options.release.set(null)
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

tasks.named('compileJava') {
    dependsOn 'compileVectorJava'
    options.compilerArgs += [
            '--patch-module', "icyllis.arc3d.image=${sourceSets.vector.output.classesDirs.asPath}"
    ]
}

tasks.named('jar') {
    from sourceSets.vector.output
}

publishing {
    def lwjglVersion = getProperty('lwjgl_version')
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'Arc3D Image'
                description = 'A modern, high-performance image codec library.'
                url = project.arc3d_url
                scm {
                    connection = project.arc3d_scm_connection
                    developerConnection = project.arc3d_scm_developerConnection
                    url = project.arc3d_scm_url
                }
                issueManagement {
                    system = project.arc3d_issueManagement_system
                    url = project.arc3d_issueManagement_url
                }
                licenses {
                    license {
                        name = 'LGPL-3.0-or-later'
                        url = 'https://www.gnu.org/licenses/lgpl-3.0.en.html'
                        distribution = 'repo'
                    }
                }
                developers {
                    developer {
                        id = project.arc3d_developer_id
                        name = project.arc3d_developer_name
                        email = project.arc3d_developer_email
                        url = project.arc3d_developer_url
                    }
                }
                withXml {
                    def root = asNode()
                    root.dependencyManagement.each { root.remove(it) }
                    root.dependencies.each { root.remove(it) }
                    def dependenciesNode = root.appendNode('dependencies')
                    configurations.implementation.allDependencies.each {
                        if (it.group == 'org.lwjgl') return
                        def dependencyNode = dependenciesNode.appendNode('dependency')
                        dependencyNode.appendNode('groupId', it.group)
                        dependencyNode.appendNode('artifactId', it.name)
                        dependencyNode.appendNode('version', it.version)
                        dependencyNode.appendNode('scope', 'compile')
                    }
                    configurations.compileOnly.allDependencies.each {
                        if (it.group == 'org.lwjgl') return
                        def dependencyNode = dependenciesNode.appendNode('dependency')
                        dependencyNode.appendNode('groupId', it.group)
                        dependencyNode.appendNode('artifactId', it.name)
                        dependencyNode.appendNode('version', it.version)
                        dependencyNode.appendNode('scope', 'provided')
                    }
                    configurations.runtimeOnly.allDependencies.each {
                        if (it.group == 'org.lwjgl') return
                        def dependencyNode = dependenciesNode.appendNode('dependency')
                        dependencyNode.appendNode('groupId', it.group)
                        dependencyNode.appendNode('artifactId', it.name)
                        dependencyNode.appendNode('version', it.version)
                        dependencyNode.appendNode('scope', 'runtime')
                    }
                }
            }
        }
    }
}

signing {
    useGpgCmd()
    sign(publishing.publications["mavenJava"])
}